# pic2dialog

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
src/image_chat_bot/: __init__.py
